#add_subdirectory(MoreExamples/IPlugChunks)
#add_subdirectory(MoreExamples/IPlugControls)
#add_subdirectory(MoreExamples/IPlugConvoEngine)
#add_subdirectory(MoreExamples/IPlugDistortion)
#add_subdirectory(MoreExamples/IPlugEEL)
add_subdirectory(IPlugEffect)
#add_subdirectory(MoreExamples/IPlugGUIResize)
#add_subdirectory(MoreExamples/IPlugHostDetect)
#add_subdirectory(MoreExamples/IPlugMonoSynth)
#add_subdirectory(MoreExamples/IPlugMouseTest)
#add_subdirectory(MoreExamples/IPlugMultiChannel)
#add_subdirectory(MoreExamples/IPlugMultiTargets)
#add_subdirectory(MoreExamples/IPlugOpenGL)
#add_subdirectory(MoreExamples/IPlugPlush)
#add_subdirectory(MoreExamples/IPlugPolySynth)
#add_subdirectory(MoreExamples/IPlugResampler)
#add_subdirectory(MoreExamples/IPlugSideChain)
#add_subdirectory(MoreExamples/IPlugText)
